cluster-infra/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: helm-hooks
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: sync-waves
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
---
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
