cluster-infra/cicd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd
  namespace: argocd
  labels:
    app: cicd
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: cicd
  template:
    metadata:
      labels:
        app: cicd
    spec:
      serviceAccountName: cicd-operator
      imagePullSecrets:
        - name: ghcr-kj800x
      containers:
        - name: cicd
          image: ghcr.io/kj800x/cicd:commit-61627daad703d554512674bce77dbd5811b217dc
          command: [ "cicd" ]
          workingDir: "/usr/src/cicd"
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: cicd-data
              mountPath: /data
      volumes:
        - name: cicd-data
          nfs:
            server: 10.60.1.15
            path: /data/services/cicd
