cluster-infra/cicd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cicd
  namespace: argocd
spec:
  type: LoadBalancer
  selector:
    app: cicd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
