cluster-infra/kube-dashboard-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-adder
  namespace: kubernetes-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.home.coolkev.com
spec:
  type: LoadBalancer
  selector:
    app: auth-adder
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
