cluster-infra/kube-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  selector:
    app.kubernetes.io/instance: kubernetes-dashboard
    app.kubernetes.io/name: kong
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
      nodePort: 31000
