cluster-infra/cicd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cicd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/hostname: cicd.home.coolkev.com
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: cicd.home.coolkev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cicd-service
                port:
                  number: 80
