cluster-infra/kube-dashboard-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-adder
  namespace: kubernetes-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/hostname: k8s.home.coolkev.com
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: k8s.home.coolkev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-adder
                port:
                  number: 80
